kubernetes/apps/home-automation/zigbee2mqtt/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: home-automation
  labels:
    app: zigbee2mqtt
  name: zigbee2mqtt
spec:
  selector:
    app: zigbee2mqtt
  type: ClusterIP
  ports:
  - name: web-ui
    protocol: TCP
    port: 9442
    targetPort: 9442
